--- a/index.html
+++ b/index.html
@@ -15,16 +15,24 @@
 <body>
     
     <!-- Navegation Bar -->
-    <nav>
-        <a href="index.html"><h1><i class="fa-solid fa-home"></i> R. State </h1></a>
-        <ul class="navLinks">
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav class="navBar">
+            <a href="index.html"><h1><i class="fa-solid fa-home"></i> R. State </h1></a>
+            <ul class="navLinks">
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">PROPRIEDADES</a></li>
+                <li><a href="#">SOBRE</a></li>
+                <li><a class="ctn" href="#">Entrar</a></li>
+            </ul>
+            <button type="button" id="button" class="menuBtn" onclick="handleClick()">
+                <div></div>
+                <div></div>
+                <div></div>
+            </button>
+        </nav>
+    </header>
+
+  
 
 </body>
 </html>
