hero done desktop done

--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
         </nav>
     </header>
 
-  
+    <section class="hero">
+        <div class="heroContent">
+            <h2>Os melhores imóveis para você</h2>
+            <h1>Encontre o seu próximo lugar perfeito para viver</h1>
+        </div>
+    </section>
 
 </body>
 </html>
