about done desktop done

--- a/index.html
+++ b/index.html
@@ -32,12 +32,29 @@
         </nav>
     </header>
 
+    <!-- Hero -->
     <section class="hero">
         <div class="heroContent">
             <h2>Os melhores imóveis para você</h2>
             <h1>Encontre o seu próximo lugar perfeito para viver</h1>
         </div>
     </section>
+
+    <!-- About Us -->
+    <section class="aboutUs">
+        <div class="image-col">
+            <img src="./assets/img/about.jpg" alt="">
+        </div>
+        <div class="content-col">
+            <h4>SOBRE NÓS</h4>
+            <h2>Oferecemos o melhor imóvel para você!</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum voluptatibus assumenda eius ducimus maxime.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum voluptatibus assumenda eius ducimus maxime.</p>
+            <a class="ctn" href="#">Saiba mais</a>
+        </div>
+    </section>
+
+
 
 </body>
 </html>
