service done desktop done

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
     <!-- About Us -->
     <section class="aboutUs">
-        <div class="image-col">
+        <div class="image_col">
             <img src="./assets/img/about.jpg" alt="">
         </div>
-        <div class="content-col">
+        <div class="content_col">
             <h4>SOBRE NÓS</h4>
             <h2>Oferecemos o melhor imóvel para você!</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum voluptatibus assumenda eius ducimus maxime.</p>
@@ -54,7 +54,24 @@
         </div>
     </section>
 
+    <section class="services">
+        <div class="item_service">
+            <i class="fa-solid fa-user"></i>
+            <h4>Realize seu sonho</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam</p>
+        </div>
+        <div class="item_service">
+            <i class="fa-solid fa-desktop"></i>
+            <h4>Realize seu sonho</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam</p>
+        </div>
+        <div class="item_service">
+            <i class="fa-solid fa-home"></i>
+            <h4>Realize seu sonho</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam</p>
+        </div>
 
+    </section>
 
 </body>
 </html>
