properties done desktop done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
      <!-- Folhas de Estilização CSS -->
      <link rel="stylesheet" href="assets/css/style.css">
+     <link rel="stylesheet" href="assets/css/globalStyles.css">
      <link rel="stylesheet" href="assets/css/brands.min.css">
      <link rel="stylesheet" href="assets/css/solid.min.css">
      <link rel="stylesheet" href="assets/css/fontawesome.min.css">
@@ -16,9 +17,9 @@
     
     <!-- Navegation Bar -->
     <header>
-        <nav class="navBar">
+        <nav class="nav_bar">
             <a href="index.html"><h1><i class="fa-solid fa-home"></i> R. State </h1></a>
-            <ul class="navLinks">
+            <ul class="nav_links">
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">PROPRIEDADES</a></li>
                 <li><a href="#">SOBRE</a></li>
@@ -34,14 +35,14 @@
 
     <!-- Hero -->
     <section class="hero">
-        <div class="heroContent">
+        <div class="hero_content">
             <h2>Os melhores imóveis para você</h2>
             <h1>Encontre o seu próximo lugar perfeito para viver</h1>
         </div>
     </section>
 
     <!-- About Us -->
-    <section class="aboutUs">
+    <section class="about_us">
         <div class="image_col">
             <img src="./assets/img/about.jpg" alt="">
         </div>
@@ -70,7 +71,82 @@
             <h4>Realize seu sonho</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, totam</p>
         </div>
+    </section>
 
+    <!-- properties -->
+    <section class="properties">
+        <div class="properties_content">
+            <h4>Recente</h4>
+            <h2>Nossas Propriedades Características</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga at aliquam!</p>
+        </div>
+        <div class="row">
+            <div class="property_card">
+                <img src="./assets/img/p6.jpg" alt="" srcset="">
+                <div class="content">
+                <h4>$ 12,999</h4>
+                <p>The Palace</p>
+                <div class="detail">
+                    <p>London, Uk</p>
+                    <p>
+                        <i class="fa-solid fa-bed"><span> 5</span></i>  
+                        <i class="fa-solid fa-bath"><span> 5</span></i>                     
+                    </p>
+                </div>
+                </div>
+            </div>
+            <div class="property_card">
+                <img src="./assets/img/p2.jpg" alt="" srcset="">
+                <div class="content">
+                <h4>$ 12,999</h4>
+                <p>The Palace</p>
+                <div class="detail">
+                    <p>London, Uk</p>
+                    <p>
+                        <i class="fa-solid fa-bed"><span> 5</span></i>  
+                        <i class="fa-solid fa-bath"><span> 5</span></i>                     
+                    </p>
+                </div>
+                </div>
+            </div>
+            <div class="property_card">
+                <img src="./assets/img/p9.jpg" alt="" srcset="">
+                <div class="content">
+                <h4>$ 12,999</h4>
+                <p>The Palace</p>
+                <div class="detail">
+                    <p>London, Uk</p>
+                    <p>
+                        <i class="fa-solid fa-bed"><span> 5</span></i>  
+                        <i class="fa-solid fa-bath"><span> 5</span></i>                     
+                    </p>
+                </div>
+                </div>
+            </div>
+            <div class="property_card">
+                <img src="./assets/img/p4.jpg" alt="" srcset="">
+                <div class="content">
+                <h4>$ 12,999</h4>
+                <p>The Palace</p>
+                <div class="detail">
+                    <p>London, Uk</p>
+                    <p>
+                        <i class="fa-solid fa-bed"><span> 5</span></i>  
+                        <i class="fa-solid fa-bath"><span> 5</span></i>                     
+                    </p>
+                </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- help -->
+    <section class="help">
+        <h2>O que tem em mente? Deixe-nos ajudá-lo</h2>
+        <div class="send_email">
+            <input type="email" placeholder="teuemail@gmail.com">
+            <a href="#" class="ctn">SEND</a>
+        </div>
     </section>
 
 </body>
