--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     
     <!-- Navegation Bar -->
-    <header>
+    <header id="home">
         <nav class="nav_bar">
             <a href="index.html"><h1><i class="fa-solid fa-home"></i> R. State </h1></a>
             <ul class="nav_links">
@@ -148,6 +148,47 @@
             <a href="#" class="ctn">SEND</a>
         </div>
     </section>
+
+    <!-- footer -->
+    <footer>
+        <div class="footer_content">
+            <div class="col">
+                <h2><a href="#home"><i class="fa-solid fa-home"></i> R. State</a></h2>
+            </div>
+            <div class="col">
+                <h3>Links Rápidos</h3>
+                <ul>
+                    <li><a href="#">Agência</a></li>
+                    <li><a href="#">Prédio</a></li>
+                    <li><a href="#">Cotações</a></li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3>Localizações</h3>
+                <ul>
+                    <li><a href="#">Birmingham</a></li>
+                    <li><a href="#">London</a></li>
+                    <li><a href="#">Luanda</a></li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3>Contactos</h3>
+                <ul>
+                    <li><a href="tel:+">+99 12345678</a></li>
+                    <li><a href="mailto:">rstate@mail.com</a></li>
+                    <div class="social_midia">
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                    </div>
+                </ul>
+            </div>
+        </div>
+        <div class="footer_bottom">
+            Copyright © 2023 R. State. Designed By MIGUEL KAMBAMBA
+        </div>
+    </footer>
 
 </body>
 </html>
