--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#">SOBRE</a></li>
                 <li><a class="ctn" href="#">Entrar</a></li>
             </ul>
-            <button type="button" id="button" class="menuBtn" onclick="handleClick()">
+            <button type="button" id="button" class="menuBtn">
                 <div></div>
                 <div></div>
                 <div></div>
@@ -150,7 +150,7 @@
     </section>
 
     <!-- footer -->
-    <footer>
+    <footer class="footer">
         <div class="footer_content">
             <div class="col">
                 <h2><a href="#home"><i class="fa-solid fa-home"></i> R. State</a></h2>
