readme, index and style updated

--- a/index.html
+++ b/index.html
@@ -137,6 +137,62 @@
                 </div>
                 </div>
             </div>
+            <div class="property_card">
+                <img src="./assets/img/p7.jpg" alt="" srcset="">
+                <div class="content">
+                <h4>$ 12,999</h4>
+                <p>The Palace</p>
+                <div class="detail">
+                    <p>London, Uk</p>
+                    <p>
+                        <i class="fa-solid fa-bed"><span> 5</span></i>  
+                        <i class="fa-solid fa-bath"><span> 5</span></i>                     
+                    </p>
+                </div>
+                </div>
+            </div>
+            <div class="property_card">
+                <img src="./assets/img/p5.jpg" alt="" srcset="">
+                <div class="content">
+                <h4>$ 12,999</h4>
+                <p>The Palace</p>
+                <div class="detail">
+                    <p>London, Uk</p>
+                    <p>
+                        <i class="fa-solid fa-bed"><span> 5</span></i>  
+                        <i class="fa-solid fa-bath"><span> 5</span></i>                     
+                    </p>
+                </div>
+                </div>
+            </div>
+            <div class="property_card">
+                <img src="./assets/img/p11.jpg" alt="" srcset="">
+                <div class="content">
+                <h4>$ 12,999</h4>
+                <p>The Palace</p>
+                <div class="detail">
+                    <p>London, Uk</p>
+                    <p>
+                        <i class="fa-solid fa-bed"><span> 5</span></i>  
+                        <i class="fa-solid fa-bath"><span> 5</span></i>                     
+                    </p>
+                </div>
+                </div>
+            </div>
+            <div class="property_card">
+                <img src="./assets/img/p8.jpg" alt="" srcset="">
+                <div class="content">
+                <h4>$ 12,999</h4>
+                <p>The Palace</p>
+                <div class="detail">
+                    <p>London, Uk</p>
+                    <p>
+                        <i class="fa-solid fa-bed"><span> 5</span></i>  
+                        <i class="fa-solid fa-bath"><span> 5</span></i>                     
+                    </p>
+                </div>
+                </div>
+            </div>
         </div>
     </section>
 
